crates/ic-lint/tests/snapshots/unused_include__empty_include_warning.snap
---
source: crates/ic-lint/tests/unused_include.rs
expression: test_lint_with_includes(source)
---
! unused-include: unused include `empty_file.idl`
  @ test.idl:2:18

 2 │ #include "empty_file.idl"
   │          ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ unused include
 3 │ 
 4 │ struct LocalStruct {

  ? remove this include if it is not needed
