crates/ic-lint/tests/snapshots/unused_include__unused_annotation_include_warning.snap
---
source: crates/ic-lint/tests/unused_include.rs
expression: test_lint_with_includes(source)
---
warning[unused-include]: unused include `unused_annotation.idl`
   ┌ test.idl:2:18
   │
 2 │         #include "unused_annotation.idl"
   ·                  ^^^^^^^^^^^^^^^^^^^^^^^ unused include
 3 │ 
 4 │         struct LocalStruct {
 5 │             long value;
   └──
 help: remove this include if it is not needed
