crates/ic-lint/tests/snapshots/unused_include__unused_include_warning.snap
---
source: crates/ic-lint/tests/unused_include.rs
expression: test_lint_with_includes(source)
---
! unused-include: unused include `unused_types.idl`
  @ test.idl:2:18

 2 │ #include "unused_types.idl"
   │          ˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆˆ unused include
 3 │ 
 4 │ struct LocalStruct {

  ? remove this include if it is not needed
